# omnihilux

./: Cargo.toml  Rustfmt.toml
assets/shaders/: draw.wgsl
src/: lib.rs  main.rs
src/draw/: basic.rs  line.rs  mod.rs  pipeline.rs  vertex.rs
src/draw/core/: mod.rs
src/entity/: mod.rs
src/entity/blob/: mod.rs
src/shape/: mod.rs  pipeline.rs  vertex.rs
src/util/: math.rs  mod.rs
