[package]
name = "omnihilux"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
bytemuck = "1"
fastapprox = "0.3"
fastrand = "2"
float_next_after = "1"
iyes_progress = { version = "0.11", features = ["assets"] }
mimalloc = "*"
radsort = "0.1"

[dependencies.bevy]
version = "0.13"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "multi-threaded",

    "png",
    "wayland",
    "x11",
]

[features]
dev = ["bevy/dynamic_linking", "bevy/asset_processor", "bevy/file_watcher"]
